packages/web/src/components/spa/JobsSection/jobs_section.css
:root {
    --main-color: #32baf4;
    --shadow-color: #467edd;
    --background-color: #f7f7f7;
    --font-family: 'Poppins';
    --text-color: #333;
    --placeholder-color: white;
}
.jobs-page {
    background: linear-gradient(rgb(21, 76, 121), rgb(118, 181, 197));
    min-height: 94vh;
}

@keyframes jobsFadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

.no-jobs-container {
    padding-top: 8%;
    display: flex;
    justify-content: center;
}

.no-jobs-image {
    height: 60vh;
}

@media only screen and (max-width: 900px) {
    .jobs-page {
        min-height: 90vh;
    }

    .no-jobs-container {
        padding-top: 40%;
        display: flex;
        justify-content: center;
    }

    .no-jobs-image {
        height: 40vh;
    }
}

.jobs-page .footer-container {
    margin-top: 4vh;
}

.jobs-card-section {
    display: flex;
    padding-top: 10vh;
    margin-left: 6%;
    margin-right: 6%;
    justify-content: center;
    align-items: center;
    animation: jobsFadeIn 1s;
}

.jobs-section-body {
    justify-content: center;
    width: 100%;
    height: 100%;
    display: flex;
    flex-wrap: wrap;
    margin-top: 2.5%;
    margin-bottom: 2.5%;
}

.job-logo {
    margin-top: 5%;
    width: 90%;
    margin-bottom: 5%;
    height: 24vh;
    margin-left: 5.5%;
    margin-right: 5.5%;
    align-self: center;
    display: flex;
}

.jobs-section-body .job-logo img {
    object-fit: scale-down;
    max-width: 100%;
    height: 100%;
}

.job-card-content {
    width: 400px;
    height: 487px;
    background-color: #fff;
    display: flex;
    flex-direction: column;
    margin-left: 2.5%;
    margin-right: 2.5%;
    margin-top: 2.5%;
    margin-bottom: 2.5%;
    transition: all 0.3s;
    border-radius: 5vh;
}
.job-description {
    height: 17vh;
    width: 90%;
    align-self: center;
    display: flex;
    flex-wrap: wrap;
    align-content: center;
    margin-top: 2.5%;
    margin-bottom: 4.5%;
}

.job-position {
    align-self: center;
    width: 90%;
}

.job-position h3 {
    font-size: 1.3em;
}

.job-description p {
    height: 100%;
    text-align: justify;
    margin: 0;
    font-size: 0.9em;
    /* overflow-y: scroll; */
}

.job-button {
    width: 90%;
    justify-items: end;
    margin-bottom: 5%;
    /* margin-top: 5%; */
    align-self: center;
}

.job-button a {
    width: 100%;
    justify-content: center;
    display: flex;
    flex-wrap: wrap;
    align-content: center;
    text-decoration: none;
    height: 43px;
    border-radius: 4vh;
    font-weight: 600;
    color: #fff;
    cursor: pointer;
    text-align: center;
    background-size: 300% 100%;
    font-size: 1em;
    background-image: linear-gradient(
        to right,
        #32baf4,
        #467edd,
        #3f86ed,
        #47acdf,
        #24cc8e
    );
    transition: all 0.3s ease-in-out;
}

.job-button :hover {
    background-position: right;
    box-shadow: 0 6% 20% 0 rgba(65, 132, 234, 0.95);
    background-color: #fff;
    text-shadow: 1% 1% #4481eb;
    color: #fff;
}
/* @media only screen and (max-width: 1024px) {
    
    
} */
@media only screen and (max-width: 1100px) and (max-height: 600px) {
    .job-card-content {
        height: auto;
    }
    .job-button {
        margin-top: 7vh;
    }
}
@media only screen and (max-width: 750px) {
    .job-card-content {
        height: auto;
    }
    .job-button {
        margin-top: 5vh;
    }
    .jobs-page .footer-container {
        margin-top: 0;
    }
    .jobs-section-body {
        margin-left: 3.5%;
        margin-right: 3.5%;
    }
    .job-description p {
        font-size: 0.8em;
    }
    .jobs-loader {
        height: 80vh;
    }
}

@media only screen and (max-width: 300px) {
    .job-description {
        height: 25vh;
    }
    .job-description p {
        font-size: 0.8em;
    }
    .job-button {
        margin-top: 20%;
    }
}

@media (hover: hover) and (pointer: fine) {
    .job-card-content:hover {
        transform: translateY(-2%) rotate(0deg);
        box-shadow: 0 1.5% 2% #467edd;
        cursor: pointer;
        z-index: 1;
        transition: all 0.3s;
    }

    .job-card-content::before {
        content: '';
        position: absolute;
        width: 400px;
        height: 487px;

        border-radius: 10%;
        background-color: rgba(255, 255, 255, 0.1);
        z-index: -1;
        transform: scale(1);
        transition: all 0.3s;
    }

    .job-card-content:hover::before {
        transform: scale(1.1);
    }

    .job-button a:hover {
        background-position: right;
        box-shadow: 0 6% 20% 0 rgba(65, 132, 234, 0.95);
        transform: translateY(-2%);
        background-color: #fff;
        text-shadow: 1% 1% #4481eb;
    }
}

.lds-ellipsis {
    position: relative;
    width: 160px;
    height: 160px;
    align-self: center;
    display: flex;
    align-items: center;
}
.lds-ellipsis div {
    position: absolute;
    width: 26px;
    height: 26px;
    border-radius: 50%;
    background: white;
    animation-timing-function: cubic-bezier(0, 1, 1, 0);
}
.lds-ellipsis div:nth-child(1) {
    left: 16px;
    animation: lds-ellipsis1 0.6s infinite;
}
.lds-ellipsis div:nth-child(2) {
    left: 16px;
    animation: lds-ellipsis2 0.6s infinite;
}
.lds-ellipsis div:nth-child(3) {
    left: 64px;
    animation: lds-ellipsis2 0.6s infinite;
}
.lds-ellipsis div:nth-child(4) {
    left: 112px;
    animation: lds-ellipsis3 0.6s infinite;
}
@keyframes lds-ellipsis1 {
    0% {
        transform: scale(0);
    }
    100% {
        transform: scale(1);
    }
}
@keyframes lds-ellipsis3 {
    0% {
        transform: scale(1);
    }
    100% {
        transform: scale(0);
    }
}
@keyframes lds-ellipsis2 {
    0% {
        transform: translate(0, 0);
    }
    100% {
        transform: translate(48px, 0);
    }
}

.jobs-loader {
    display: flex;
    height: 84vh;
    justify-content: center;
    align-items: center;
}

